--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.16"
   },
   "devDependencies": {
